--- a/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Wpf_Morbius.View.FirstView"
+﻿<Window x:Class="Wpf_Morbius.View.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="FirstWindow" Height="300" Width="300">
