--- a/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
@@ -1,9 +1,21 @@
 ﻿<Window x:Class="Wpf_Morbius.View.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="FirstWindow" Height="300" Width="300">
+        Title="LoginWindow" Height="300" Width="300" xmlns:Behaviours="clr-namespace:Wpf_Morbius">
+
+    <Window.Resources>
+        <Style x:Key="StyleMainGrid">
+            <!--trigger pour fermer la fenêtre-->
+            <Style.Triggers>
+                <DataTrigger  Binding="{Binding CloseSignal}" Value="true">
+                    <Setter Property="Behaviours:WindowCloseBehaviour.Close" Value="true"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+
     <Grid>
-        <Button Width="100" Height="30" Content="Se Connecter" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=password}" Margin="96,195,96,45"/>
+        <Button Content="Se Connecter" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=password}" Margin="96,195,76,27"/>
         <Label Content="Login :" HorizontalAlignment="Left" Margin="45.5,77.5,0,0" VerticalAlignment="Top"/>
         <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="45.5,108.46,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Text="{Binding Login, Mode=TwoWay}" Height="23" Margin="137.8,80.46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
