--- a/morice_eMorbius/Wpf-Morbius/View/MasterView.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/MasterView.xaml
@@ -1,7 +1,24 @@
-﻿<mui:ModernWindow x:Class="MuiTest.MainWindow"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:mui="http://firstfloorsoftware.com/ModernUI"
-  Title="MainWindow" Height="350" Width="525">
+﻿<mui:ModernWindow x:Class="Wpf_Morbius.View.MasterView"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mui="http://firstfloorsoftware.com/ModernUI"
+        Title="MasterView" Height="300" Width="300">
+    <mui:ModernWindow.TitleLinks>
+        <mui:Link DisplayName="Deconnexion" Source="" />
+    </mui:ModernWindow.TitleLinks>
     
+    <mui:ModernWindow.MenuLinkGroups>
+        <mui:LinkGroup DisplayName="Patients" >
+            <mui:LinkGroup.Links>
+                <mui:Link DisplayName="Consulter" Source=""/>
+                <mui:Link DisplayName="Ajouter" Source=""/>
+            </mui:LinkGroup.Links>
+        </mui:LinkGroup>
+        <mui:LinkGroup DisplayName="Utilisateurs" >
+            <mui:LinkGroup.Links>
+                <mui:Link DisplayName="Consulter" Source=""/>
+                <mui:Link DisplayName="Ajouter" Source=""/>
+            </mui:LinkGroup.Links>
+        </mui:LinkGroup>
+    </mui:ModernWindow.MenuLinkGroups>
 </mui:ModernWindow>
