--- a/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
@@ -15,10 +15,12 @@
     </Window.Resources>
 
     <Grid Style="{StaticResource StyleMainGrid}">
-        <Button Content="Se Connecter" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=password}" Margin="96,195,76,27"/>
         <Label Content="Login :" HorizontalAlignment="Left" Margin="45.5,77.5,0,0" VerticalAlignment="Top"/>
         <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="45.5,108.46,0,0" VerticalAlignment="Top"/>
         <TextBox HorizontalAlignment="Left" Text="{Binding Login, Mode=TwoWay}" Height="23" Margin="137.8,80.46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <PasswordBox Name="password" HorizontalAlignment="Left" Margin="137.8,114.62,0,0" VerticalAlignment="Top" Width="120"/>
+
+        <Label Content="{Binding Error}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="46,159,0,0" Height="31" Width="212"/>
+        <Button Content="Se Connecter" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=password}" Margin="96,195,76,27"/>
     </Grid>
 </Window>
