--- a/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/LoginView.xaml
@@ -15,12 +15,15 @@
     </Window.Resources>
 
     <Grid Style="{StaticResource StyleMainGrid}">
-        <Label Content="Login :" HorizontalAlignment="Left" Margin="45.5,77.5,0,0" VerticalAlignment="Top"/>
-        <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="45.5,108.46,0,0" VerticalAlignment="Top"/>
-        <TextBox HorizontalAlignment="Left" Text="{Binding Login, Mode=TwoWay}" Height="23" Margin="137.8,80.46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <PasswordBox Name="password" HorizontalAlignment="Left" Margin="137.8,114.62,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Login :" HorizontalAlignment="Left" Margin="46,48,0,0" VerticalAlignment="Top"/>
+        <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="46,79,0,0" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Text="{Binding Login, Mode=TwoWay}" Height="23" Margin="138,51,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <PasswordBox Name="password" HorizontalAlignment="Left" Margin="138,86,0,0" VerticalAlignment="Top" Width="120"/>
 
-        <Label Content="{Binding Error}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="46,159,0,0" Height="31" Width="212" Foreground="Red" />
+
+
+        <TextBlock Text="{Binding Error}" Foreground="Red" TextWrapping="WrapWithOverflow" FontWeight="Bold" TextAlignment="Center" Margin="10,118,10,89" Height="63" Width="250"></TextBlock>
+        
         <Button Content="Se Connecter" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=password}" Margin="96,195,76,27"/>
     </Grid>
 </Window>
