--- a/morice_eMorbius/Wpf-Morbius/View/Pages/patient.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/patient.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid Name="content">
-        <Label Content="Prénom Nom - ../../.." HorizontalAlignment="Left" Margin="10,-10,0,0" VerticalAlignment="Top"/>
+        <Label Content="{Binding BasicInformation}" HorizontalAlignment="Left" Margin="10,-10,0,0" VerticalAlignment="Top"/>
         <mui:ModernTab SelectedSource="View/Pages/patient_details.xaml" Layout="Tab" Margin="10,31,0,0">
             <mui:ModernTab.Links>
                 <mui:Link DisplayName="Résumé" Source="View/Pages/patient_details.xaml"/>
