--- a/morice_eMorbius/Wpf-Morbius/View/Pages/user_add.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/user_add.xaml
@@ -15,13 +15,14 @@
         <Label Content="Mot de passe :" HorizontalAlignment="Left" Margin="10,137,0,0" VerticalAlignment="Top"/>
         <Label Content="Role :" HorizontalAlignment="Left" Margin="10,165,0,0" VerticalAlignment="Top"/>
         <Label Content="Photo :" HorizontalAlignment="Left" Margin="10,193,0,0" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="113,50,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="113,78,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="113,106,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <PasswordBox Margin="113,134,10,0" VerticalAlignment="Top" Height="23"/>
-        <TextBox Height="23" Margin="113,162,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="113,50,10,0" TextWrapping="Wrap" Text="{Binding Name, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="113,78,10,0" TextWrapping="Wrap" Text="{Binding Firstname, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="113,106,10,0" TextWrapping="Wrap" Text="{Binding Login, Mode=TwoWay}" VerticalAlignment="Top"/>
+        <PasswordBox Name="Password" Margin="113,134,10,0" VerticalAlignment="Top" Height="23"/>
+        <TextBox Height="23" Margin="113,162,10,0" TextWrapping="Wrap" Text="{Binding Role, Mode=TwoWay}" VerticalAlignment="Top"/>
         <TextBox Height="23" Margin="113,190,10,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button Content="Ajouter" Margin="0,0,10,10" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Bottom" />
+
+        <Button Content="Ajouter" Command="{Binding AddUserCommand}" CommandParameter="{Binding ElementName=Password}" Margin="0,0,10,10" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Bottom" />
 
     </Grid>
 </Page>
