--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientAdd.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientAdd.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Wpf_Morbius.View.Pages.patient_add"
+﻿<Page x:Class="Wpf_Morbius.View.Pages.PatientAdd"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,11 +11,11 @@
         <Label Content="Ajout d'un patient" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
         <Label Content="Nom :" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top"/>
         <Label Content="Prenom :" HorizontalAlignment="Left" Margin="10,81,0,0" VerticalAlignment="Top"/>
-        <Label Content="Dat de naissance :" HorizontalAlignment="Left" Margin="10,109,0,0" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="131,50,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <TextBox Height="23" Margin="131,78,10,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Button Content="Ajouter" Margin="0,0,10,10" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Bottom" />
-        <DatePicker Margin="131,106,10,0" VerticalAlignment="Top"/>
+        <Label Content="Date de naissance :" HorizontalAlignment="Left" Margin="10,109,0,0" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="131,50,10,0" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top"/>
+        <TextBox Height="23" Margin="131,78,10,0" TextWrapping="Wrap" Text="{Binding Firstname}" VerticalAlignment="Top"/>
+        <DatePicker Margin="131,106,10,0" VerticalAlignment="Top" SelectedDate="{Binding Birthday}"/>
 
+        <Button Content="Ajouter" Margin="0,0,10,10" Command="{Binding AddPatientCommand}" HorizontalAlignment="Right" Width="121" Height="26" VerticalAlignment="Bottom" />
     </Grid>
 </Page>
