--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientDetails.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientDetails.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Wpf_Morbius.View.Pages.user_details"
+﻿<UserControl x:Class="Wpf_Morbius.View.Pages.PatientDetails"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
