--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientList.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientList.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Wpf_Morbius.View.Pages.patient_list"
+﻿<Page x:Class="Wpf_Morbius.View.Pages.PatientList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,7 +10,7 @@
 	  Title="Liste des patients">
 
     <Grid>
-        <mui:ModernTab SelectedSource="/View/Pages/nopatient.xaml" Layout="List" Name="listBox" Links="{Binding Items}" >
+        <mui:ModernTab SelectedSource="/View/Pages/NoPatient.xaml" Layout="List" Name="listBox" Links="{Binding Items}" >
             <mui:ModernTab.ContentLoader>
                 <app:ListContentLoader />
             </mui:ModernTab.ContentLoader>
