--- a/morice_eMorbius/Wpf-Morbius/View/Pages/UserAdd.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/UserAdd.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Wpf_Morbius.View.Pages.user_add"
+﻿<Page x:Class="Wpf_Morbius.View.Pages.UserAdd"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
