--- a/morice_eMorbius/Wpf-Morbius/View/Pages/UserList.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/UserList.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Wpf_Morbius.View.Pages.user_list"
+﻿<Page x:Class="Wpf_Morbius.View.Pages.UserList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,10 +7,10 @@
       xmlns:app="clr-namespace:Wpf_Morbius"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
-	Title="user_list">
+	Title="Liste des utilisateurs">
 
     <Grid>
-        <mui:ModernTab SelectedSource="/View/Pages/nouser.xaml" Layout="List" Name="listBox" Links="{Binding Items}" >
+        <mui:ModernTab SelectedSource="/View/Pages/NoUser.xaml" Layout="List" Name="listBox" Links="{Binding Items}" >
             <mui:ModernTab.ContentLoader>
                 <app:ListContentLoader />
             </mui:ModernTab.ContentLoader>
