Binding on user's profile (connection)

--- a/morice_eMorbius/Wpf-Morbius/View/Pages/user.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/user.xaml
@@ -3,9 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:app="clr-namespace:Wpf_Morbius"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
+    <UserControl.Resources>
+        <app:BoolColorConverter x:Key="colorConverter"/>
+        <app:BoolConnectedConverter x:Key="stringConverter"/>
+    </UserControl.Resources>
+    
     <Grid Name="content">
         <Label Content="{Binding Fullname}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="280"/>
 
@@ -18,8 +24,8 @@
         <Label Content="{Binding Role}" HorizontalAlignment="Left" Margin="165,62,0,0" VerticalAlignment="Top"/>
 
         <!-- Penser à binder la couleur (cf TP3) et à eventuellement changer le connecté en non connecter -->
-        <Ellipse x:Name="ellipse1" Width="10" Height="10" Stroke="Black" Fill="Green" Margin="127,131,163,159" VerticalAlignment="Top" HorizontalAlignment="Left" />
-        <Label Content="{Binding Connected}" HorizontalAlignment="Left" Margin="151,128,0,0" VerticalAlignment="Top"/>
+        <Ellipse x:Name="ellipse1"  Width="10" Height="10" Stroke="Black" Fill="{Binding Path=Connected, Converter={StaticResource colorConverter}}" Margin="127,131,163,159" VerticalAlignment="Top" HorizontalAlignment="Left" />
+        <Label Content="{Binding Path=Connected, Converter={StaticResource stringConverter}}" HorizontalAlignment="Left" Margin="151,128,0,0" VerticalAlignment="Top"/>
         <Button Content="Supprimer cet utilisateur" Margin="0,0,10,10" HorizontalAlignment="Right" Width="204" Height="26" VerticalAlignment="Bottom"/>
 
 
