--- a/morice_eMorbius/Wpf-Morbius/View/Pages/PatientDetails.xaml
+++ b/morice_eMorbius/Wpf-Morbius/View/Pages/PatientDetails.xaml
@@ -5,28 +5,30 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+    <ScrollViewer>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
 
 
-        <!-- Afficher la courbe de poids à la place du rectangle -->
-        <Label Content="Courbe de poids :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <Rectangle Fill="AliceBlue" Height="150" Margin="10,31,10,0" VerticalAlignment="Top"/>
+            <!-- Afficher la courbe de poids à la place du rectangle -->
+            <Label Content="Courbe de poids :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+            <Rectangle Fill="AliceBlue" Height="150" Margin="10,31,10,0" VerticalAlignment="Top"/>
 
-        <!-- Courbe de tension -->
-        <Label Content="Courbe de tension :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-        <Rectangle Fill="AliceBlue" Height="150" Margin="10,31,10,0" VerticalAlignment="Top" Grid.Column="1"/>
+            <!-- Courbe de tension -->
+            <Label Content="Courbe de tension :" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+            <Rectangle Fill="AliceBlue" Height="150" Margin="10,31,10,0" VerticalAlignment="Top" Grid.Column="1"/>
 
-        <!--Binder à la derniere observation si applicable-->
-        <Label Content="Dernière prescription : " HorizontalAlignment="Left" Margin="10,191,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <TextBlock Background="AliceBlue" Margin="10,212,10,0" TextWrapping="Wrap" Text="{Binding LastObservation}" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+            <!--Binder à la derniere observation si applicable-->
+            <Label Content="Dernière prescription : " HorizontalAlignment="Left" Margin="10,191,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+            <TextBlock Background="AliceBlue" Margin="10,212,10,35" TextWrapping="Wrap" Text="{Binding LastObservation}" Grid.ColumnSpan="2"/>
 
-        <!-- TODO : Invisible pour les infirmières -->
-        <Button Content="Supprimer le patient" Command="{Binding DeletePatientCommand}" Margin="0,0,10,4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="158" Height="26" VerticalAlignment="Bottom"/>
+            <!-- TODO : Invisible pour les infirmières -->
+            <Button Content="Supprimer le patient" Command="{Binding DeletePatientCommand}" Margin="0,0,10,4" Grid.ColumnSpan="2" HorizontalAlignment="Right" Width="158" Height="26" VerticalAlignment="Bottom"/>
 
 
-    </Grid>
+        </Grid>
+    </ScrollViewer>
 </UserControl>
