--- a/morice_eMorbius/Wpf-Morbius/Assets/MasterStyle.xaml
+++ b/morice_eMorbius/Wpf-Morbius/Assets/MasterStyle.xaml
@@ -4,6 +4,8 @@
                     xmlns:app="clr-namespace:Wpf_Morbius">
     
     <app:ImageConverter x:Key="imageConverter" />
+    <app:BoolColorConverter x:Key="colorConverter"/>
+    <app:BoolConnectedConverter x:Key="stringConverter"/>
 
     <Style x:Key="Title" TargetType="TextBlock">
         <Setter Property="FontFamily" Value="Segoe UI" />
@@ -12,6 +14,12 @@
         <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="TextAlignment" Value="Right"/>
         <Setter Property="Padding" Value="0,0,20,0"/>
+        <Setter Property="Margin" Value="10,0,10,0"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+    </Style>
+
+    <Style x:Key="ObsTitle" TargetType="TextBlock" BasedOn="{StaticResource Title}">
+        <Setter Property="FontSize" Value="16"/>
     </Style>
 
     <Style x:Key="Info" TargetType="TextBlock">
@@ -26,5 +34,16 @@
         <Setter Property="TextAlignment" Value="Justify"/>
         <Setter Property="Padding" Value="2"/>
     </Style>
+
+    <Style x:Key="Error" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="Segoe UI" />
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+        <Setter Property="Foreground" Value="Red"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
+
+    
+    
 
 </ResourceDictionary>
